--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,7 +9,7 @@ cmake_minimum_required(VERSION 3.4.1)
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
-
+add_compile_options(-std=c++11)
 add_library( # Sets the name of the library.
              native-lib
 
