--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        //jcenter()
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -18,7 +19,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        //jcenter()
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
